--- a/HealthCare/main_app/templates/base.html
+++ b/HealthCare/main_app/templates/base.html
@@ -1,27 +1,41 @@
+<!-- this to include the css file -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Health Care</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </head>
-  <body>
-    <header>
-        <nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Health System </title>
 
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</head>
+<body>
+    <header class="nav-bar-fixed">
+        <nav>
+            <div class="nav"></div>
+            <ul>
+                <li><a href="{% url 'home' %}" class="left brand-logo">Cat COCO</a></li>
+            </ul>
+            <ul class="section_bar">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Department</a></li>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Sign Up</a></li>
+            </ul>
         </nav>
     </header>
 
+    <main class="container">
+        {% block content %}
+        {% endblock %}
 
-{% block content%}
+    </main>
 
-{% endblock  %}
+    <footer class="page-footer">
+        <div class="right">All right Reserved, &copy; 2023 Health &nbsp;</div>
 
-<footer>
+    </footer>
 </body>
-</footer>
 </html>
-
